# authorization_service

./: .env.sample  .flake8  Dockerfile  README.md  authorization_service.postman_collection.json  docker-compose.yaml  postman_collection_server.json  pyproject.toml
config/: settings.py  urls.py
main/: urls.py  views.py
main/templates/main/: index.html  main.html
templates/general/: base.html
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_alter_user_another_invite_code.py  0004_user_tmp_code.py  0005_remove_user_tmp_code.py
users/templates/users/: user_authorization.html  user_detail.html  user_form.html  user_update.html  user_verification.html  verification_phone.html  verify_phone.html
